--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="assets/js/jquery-3.7.1.min.js"></script>
   </head>
 
-  <body class="bg-gray-100 h-screen flex flex-col poppins-regular">
+  <body class=" h-screen flex flex-col poppins-regular">
     <!-- Sidebar -->
     <div class="flex h-full">
       <aside
