--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
           </button>
           <div class="relative hidden md:block group">
             <input
+            id="search-bar"
               type="text"
               placeholder="Search here..."
               name="text"
