--- a/login.html
+++ b/login.html
@@ -75,6 +75,6 @@
       </form>
     </div>
 
-    <script type="module" src="controller/LoginService.js"></script>
+    <script type="module" src="controller/LoginFormController.js"></script>
   </body>
 </html>
