add staff popup modal

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body class=" h-screen flex flex-col poppins-regular">
     <!-- Sidebar -->
-    <div class="flex h-full">
+    <div class="flex h-full ">
       <aside
         id="sidebar"
         class="bg-white w-80 h-screen shadow-md fixed md:static z-20 sidebar-hidden md:translate-x-0"
@@ -215,7 +215,7 @@
         </div>
         
         
-          <div class="flex items-center space-x-4 pr-4 group cursor-pointer">
+          <div class="flex items-center space-x-4 pr-4 group cursor-pointer ">
             <img
               src="assets/img/default-profile.png"
               alt="Profile"
@@ -239,12 +239,12 @@
         <!-- Main Content -->
         <main class="flex-1">
           <div class="bg-white h-full">
-            <iframe class="frame-container w-full h-full"></iframe>
+            <iframe class="frame-container w-full h-full" title=""></iframe>
           </div>
         </main>
       </div>
     </div>
 
-    <script src="./assets/js/dashboard.js"></script>
+    <script type="module" src="./assets/js/dashboard.js"></script>
   </body>
 </html>
