--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             <!-- Equipment Button -->
             <li>
               <button
+              id="equipment-btn"
                 class="flex items-center w-full text-left py-2 text-gray-700 hover:bg-gray-100 hover:text-[#16a34a] hover:border-l-4 hover:border-gray-300 pl-3 transition-all"
               >
                 <img
