Add log management functionality with log saving capability and UI integration

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <!-- Monitoring Log Button -->
             <li>
               <button
+              id="mlog-btn"
                 class="flex items-center w-full text-left py-2 text-gray-700 hover:bg-gray-100 hover:text-[#16a34a] hover:border-l-4 hover:border-gray-300 pl-3 transition-all"
               >
                 <img
