Add user data handling to dashboard

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
           <button
             id="close-sidebar"
             class="md:hidden text-gray-500 hover:text-green-700 transform transition-transform duration-300 hover:scale-125"
-            
           >
             <i class="fas fa-times text-2xl"></i>
           </button>
@@ -66,7 +65,6 @@
               <button
                 id="staff-btn"
                 class="flex items-center w-full text-left py-2 text-gray-700 hover:bg-gray-100 hover:text-[#16a34a] hover:border-l-4 hover:border-gray-300 pl-3 transition-all"
-                
               >
                 <img
                   id="staff-icon"
@@ -100,7 +98,7 @@
             <!-- Crop Management Button -->
             <li>
               <button
-              id="crop-btn"
+                id="crop-btn"
                 class="flex items-center w-full text-left py-2 text-gray-700 hover:bg-gray-100 hover:text-[#16a34a] hover:border-l-4 hover:border-gray-300 pl-3 transition-all"
               >
                 <img
@@ -112,12 +110,12 @@
                 <span class="text-xs md:text-sm lg:text-base"
                   >Crop Management</span
                 >
-              </button> 
+              </button>
             </li>
             <!-- Monitoring Log Button -->
             <li>
               <button
-              id="mlog-btn"
+                id="mlog-btn"
                 class="flex items-center w-full text-left py-2 text-gray-700 hover:bg-gray-100 hover:text-[#16a34a] hover:border-l-4 hover:border-gray-300 pl-3 transition-all"
               >
                 <img
@@ -134,7 +132,7 @@
             <!-- Equipment Button -->
             <li>
               <button
-              id="equipment-btn"
+                id="equipment-btn"
                 class="flex items-center w-full text-left py-2 text-gray-700 hover:bg-gray-100 hover:text-[#16a34a] hover:border-l-4 hover:border-gray-300 pl-3 transition-all"
               >
                 <img
@@ -227,15 +225,14 @@
             />
             <div class="flex flex-col mr-4 group-hover:text-green-500">
               <span
+                id="userFullName"
                 class="font-semibold text-sm md:text-base duration-300 group-hover:text-green-500"
               >
-                Charaka Mihiranga
               </span>
               <p
+                id="userRole"
                 class="text-xs text-gray-600 md:text-sm duration-300 group-hover:text-gray-500"
-              >
-                Manager
-              </p>
+              ></p>
             </div>
           </div>
         </header>
