Add user password change functionality with email confirmation

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             <!-- Settings Button -->
             <li>
               <button
+                id="settings-btn"
                 class="flex items-center w-full text-left py-2 text-gray-700 hover:bg-gray-100 hover:text-[#16a34a] hover:border-l-4 hover:border-gray-300 pl-3 transition-all"
               >
                 <img
@@ -176,6 +177,7 @@
           </ul>
 
           <button
+            id="logout-btn"
             class="flex mt-[12vh] items-center w-full text-left py-2 text-gray-700 hover:bg-gray-100 hover:text-[#16a34a] hover:border-l-4 hover:border-gray-300 pl-3 transition-all"
           >
             <img
