Add home page functionality

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <!-- Home Button -->
             <li>
               <button
+                id="home-btn"
                 class="flex items-center w-full text-left py-2 text-gray-700 hover:bg-gray-100 hover:text-[#16a34a] hover:border-l-4 hover:border-gray-300 pl-3 transition-all"
               >
                 <img
@@ -242,7 +243,7 @@
         <!-- Main Content -->
         <main class="flex-1">
           <div class="bg-white h-full">
-            <iframe class="frame-container w-full h-full" title=""></iframe>
+            <iframe class="frame-container w-full h-full" title="frame" src="view/pages/HomeFrame.html"></iframe>
           </div>
         </main>
       </div>
