--- a/index.html
+++ b/index.html
@@ -252,6 +252,50 @@
       </div>
     </div>
 
+    <!-- Logout Modal -->
+
+    <div
+      id="logout-modal"
+      class="z-[10000] fixed inset-0 bg-opacity-50 flex justify-center items-center hidden opacity-0 transition-opacity duration-300 ease-out"
+    >
+      <div
+        class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[30vw] mb-[15vh] transform scale-95 transition-transform duration-300 ease-out"
+      >
+        <!-- Modal Header -->
+        <h1 class="text-center text-xl font-bold mb-4 text-gray-800">
+          Confirm Logout
+        </h1>
+
+        <!-- Modal Body -->
+        <div class="text-center p-4">
+          <p class="font-medium text-sm text-gray-600 px-4">
+            Are you sure you want to log out? You will need to log in again to
+            access your account.
+          </p>
+        </div>
+
+        <div class="mt-8 grid grid-cols-1 gap-4 sm:grid-cols-2">
+          <div>
+            <button
+              id="btn-logout-confirm"
+              class="w-full bg-green-600 rounded-lg py-2 px-4 text-white hover:bg-green-700 focus:outline-none transition duration-300"
+            >
+              Logout
+            </button>
+          </div>
+
+          <div>
+            <button
+              id="close-logout-modal"
+              class="w-full bg-gray-300 rounded-lg py-2 px-4 text-black hover:bg-gray-400 focus:outline-none transition duration-300"
+            >
+              Cancel
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="./assets/js/dashboard.js"></script>
   </body>
 </html>
