Add Notyf notification library to multiple HTML and JS files for improved user feedback

--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,7 @@
       sizes="192x192"
       href="assets/img/android-chrome-192x192.png"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -112,5 +113,6 @@
       </p>
     </div>
     <script type="module" src="controller/SignUpFormController.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
   </body>
 </html>
